crates/wasm-workers/src/workflow/snapshots/workflow_js_step_execution_until_finished@trimmed_to_1_replay_3.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "AppendStubResponse": {
        "events": {
          "execution_id": "E_00000000000000000000000001.g:1_1",
          "version": 1,
          "batch": [
            {
              "created_at": "1970-01-01T00:00:00.500Z",
              "event": {
                "finished": {
                  "retval": {
                    "ok": {
                      "type": "string",
                      "value": "hello"
                    }
                  },
                  "http_client_traces": null
                }
              }
            }
          ]
        },
        "response": {
          "parent_execution_id": "E_00000000000000000000000001",
          "created_at": "1970-01-01T00:00:00.500Z",
          "join_set_id": "g:1",
          "child_execution_id": "E_00000000000000000000000001.g:1_1",
          "finished_version": 1,
          "result": {
            "ok": {
              "type": "string",
              "value": "hello"
            }
          }
        },
        "current_time": "1970-01-01T00:00:00.500Z",
        "backtraces": []
      }
    }
  ]
}
