crates/wasm-workers/src/workflow/snapshots/workflow_js_step_execution_until_finished@trimmed_to_1_replay_5.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_00000000000000000000000001",
        "version": 5,
        "req": {
          "created_at": "1970-01-01T00:00:00.900Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_next",
                "join_set_id": "g:1",
                "run_expires_at": "1970-01-01T00:00:00.900Z",
                "requested_ffqn": null,
                "closing": false
              }
            }
          }
        },
        "backtraces": []
      }
    },
    {
      "AppendFinished": {
        "execution_id": "E_00000000000000000000000001",
        "version": 6,
        "current_time": "1970-01-01T00:00:00.900Z",
        "retval": {
          "ok": {
            "type": "string",
            "value": "hello"
          }
        },
        "parent": null
      }
    }
  ]
}
