crates/wasm-workers/src/workflow/snapshots/workflow_js_step_execution_until_finished@trimmed_to_1_replay_6.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "AppendFinished": {
        "execution_id": "E_00000000000000000000000001",
        "version": 6,
        "current_time": "1970-01-01T00:00:01.100Z",
        "retval": {
          "ok": {
            "type": "string",
            "value": "hello"
          }
        }
      }
    }
  ]
}
